# dba_assistant

./: .gitignore  AGENTS.md  README.md  agent_memory  pyproject.toml  redis_inspection_report.docx
.claude/: settings.local.json
config/: config.example.yaml  config.yaml
docs/: README.md  dba_assistant_agent_refactor_plan.md  dba_assistant_architecture_constraints_addendum_v1.md  dba_assistant_architecture_investigation_report_v2.md  dba_assistant_codex_handover.md  dba_assistant_master_plan_en.md  dba_assistant_master_plan_zh.md  dev_setup.md  phase-2-model-configuration-pitfalls.md  phase-3-cli-usage.md  phase-3-rdb-flow.md  phase-5-observability-baseline.md  project_audit_execution_checklist_2026-04-10.md  project_audit_preview_2026-04-10.md  redis_inspection_requirements.md
large_tool_results/: call_00_33yxiD0A2EdIMLIxgsRbhx1v
outputs/: dba_assistant_report_20260406_125916.docx  dba_assistant_report_20260406_135215.docx  dba_assistant_report_20260406_135601.docx  dba_assistant_report_20260406_140355.docx  dba_assistant_report_20260406_140510.docx  dba_assistant_report_20260406_140610.docx  dba_assistant_report_20260406_144742.docx  dba_assistant_report_20260406_145003.docx  dba_assistant_report_20260406_152328.docx  dba_assistant_report_20260406_152520.docx  dba_assistant_report_20260406_152649.docx  dba_assistant_report_20260406_152723.docx  dba_assistant_report_20260406_152806.docx  dba_assistant_report_20260406_153023.docx  dba_assistant_report_20260406_153140.docx  dba_assistant_report_20260406_160946.docx  dba_assistant_report_20260406_171806.docx  docx_final_round_sample_20260406.docx  docx_professional_sample_20260406.docx
references/: README.md
scripts/: bootstrap.sh  doctor.py  install_hdt_rdb.sh  real_3gb_rdb_acceptance.py  run_cli.sh  smoke_install.sh
src/: README.md
templates/: README.md
tests/: README.md
tmp/: check_binary_header.py  check_file_info.py  check_file_type.py  check_pwd.py  check_tar_command.sh  check_tar_simple.py  direct_extract.py  direct_tar_check.py  extract_tar.py  (+14 more)
(+312 files in other folders)
